--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <style>
 @font-face {
     font-family: "whitney";
-    src: url("C:\Windows\Fonts\whitney-medium.otf");
+    src: url("whitney-medium.otf");
 }
 @font-face {
     font-family: "unisans";
-    src: url("‪C:\Windows\Fonts\Uni Sans Heavy.otf");
+    src: url("‪Uni Sans Heavy.otf");
 }
 </style>
 
