--- a/drones/home.html
+++ b/drones/home.html
@@ -12,7 +12,7 @@
     
 <div class="navbar">
     <ul>
-       <li><a href="digi-site/index.html">Home</a></li>
+       <li><a href="../index.html">Home</a></li>
        <li><a href="#">Gallery</a></li>
        <li><a href="#">About</a></li>
     </ul> 
