small update no wow

--- a/drones/home.html
+++ b/drones/home.html
@@ -27,7 +27,7 @@
     
     <div class="all">
         <div class="header">
-            <h1><br>Drones</h1>
+            <h1>Drones</h1>
             <h5>Samuel Ou</h5>
         </div>
         
