--- a/drones/gallery.html
+++ b/drones/gallery.html
@@ -14,7 +14,7 @@
 <div class="navbar">
     <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
+        <div class="active"><li><a href="gallery.html">Gallery</a></li></div>
         <div class="navbar_breaks">
             <li><strike>​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ </strike></li>
         </div>
