--- a/drones/home.html
+++ b/drones/home.html
@@ -13,7 +13,7 @@
     
 <div class="navbar">
     <ul>
-        <li><a href="home.html">Home</a></li>
+        <div class="active"><li><a href="home.html">Home</a></li></div>
         <li><a href="gallery.html">Gallery</a></li>
         <div class="navbar_breaks">
             <li><strike>​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ </strike></li>
