Mini-project final
Drones

--- a/drones/gallery.html
+++ b/drones/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Drones</title>
     
     <link rel=stylesheet href="mini.css">
     
@@ -14,6 +14,7 @@
 <div class="navbar">
     <ul>
         <li><a href="home.html">Home</a></li>
+        <li><a href="info.html">About drones</a></li>
         <div class="active"><li><a href="gallery.html">Gallery</a></li></div>
         <div class="navbar_breaks">
             <li><strike>​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ </strike></li>
