--- a/drones/info.html
+++ b/drones/info.html
@@ -12,15 +12,18 @@
 </head>
     
 <div class="navbar">
-    <ul>
-        <li><a href="home.html">Home</a></li>
-        <div class="active"><li><a href="info.html">About drones</a></li></div>
-        <li><a href="gallery.html">Gallery</a></li>
-        <div class="navbar_breaks">
-            <li><strike>​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ ​ </strike></li>
-        </div>
-        <li><a href="../index.html">Homepage</a></li>
-    </ul> 
+    <div class="navbartop">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <div class="active"><li><a href="info.html">About drones</a></li></div>
+            <li><a href="gallery.html">Gallery</a></li>
+        </ul>
+    </div>
+    <div class="navbarbottom">
+        <ul>
+            <li><a href="../index.html">Homepage</a></li>
+        </ul>
+    </div>
 </div>
 
 
