--- a/drones/home.html
+++ b/drones/home.html
@@ -22,6 +22,7 @@
     <div class="navbarbottom">
         <ul>
             <li><a href="../index.html">Homepage</a></li>
+            <div class="navfooter"><font size="2">Samuel Ou 2018 | Digital Technology</font></div>
         </ul>
     </div>
 </div>
