made broken links less broken

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="navbar">
     <ul>
        <li><a href="index.html">Home</a></li>
-       <li><a href="drones/home.html">Mini Project</a></li>
+       <li><a href="drones/index.html">Mini Project</a></li>
        <li><a href="#">About</a></li>
     </ul> 
 </div>
