--- a/drones/info.html
+++ b/drones/info.html
@@ -25,7 +25,7 @@
         <div class="navbarbottom">
             <ul>
                 <li><a href="../index.html">Homepage</a></li>
-                <div class="navfooter"><font size="2">Samuel Ou 2018 | Digital Technology</font></div>
+                <div class="navfooter"><font size="2">Samuel Ou 2018</font></div>
             </ul>
         </div>
     </div>
