--- a/drones/index.html
+++ b/drones/index.html
@@ -16,8 +16,8 @@
     <div class="navbar">
         <div class="navbartop">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <div class="active"><li><a href="info.html">About drones</a></li></div>
+                <div class="active"><li><a href="index.html">Home</a></li></div>
+                <li><a href="info.html">About drones</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </div>
