--- a/drones/stuff.html
+++ b/drones/stuff.html
@@ -19,7 +19,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="info.html">About drones</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="#">What how did you get here</a></li>
+                <div class="active"><li><a href="#">What how did you get here</a></li></div>
             </ul>
         </div>
         <div class="navbarbottom">
