--- a/drones/info.html
+++ b/drones/info.html
@@ -17,8 +17,8 @@
     <div class="navbar">
         <div class="navbartop">
             <ul>
-                <div class="active"><li><a href="index.html">Home</a></li></div>
-                <li><a href="info.html">About drones</a></li>
+                <li><a href="index.html">Home</a></li>
+                <div class="active"><li><a href="info.html">About drones</a></li></div>
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </div>
