--- a/drones/index.html
+++ b/drones/index.html
@@ -16,9 +16,9 @@
     <div class="navbar">
         <div class="navbartop">
             <ul>
-                <div class="active"><li><a href="index.html">Home</a></li></div>
-                <li><a href="info.html">About drones</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <div class="active"><li><a href="index">Home</a></li></div>
+                <li><a href="info">About drones</a></li>
+                <li><a href="gallery">Gallery</a></li>
             </ul>
         </div>
         <div class="navbarbottom">
