--- a/drones/info.html
+++ b/drones/info.html
@@ -17,14 +17,14 @@
     <div class="navbar">
         <div class="navbartop">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <div class="active"><li><a href="info.html">About drones</a></li></div>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="index/">Home</a></li>
+                <div class="active"><li><a href="info/">About drones</a></li></div>
+                <li><a href="gallery/">Gallery</a></li>
             </ul>
         </div>
         <div class="navbarbottom">
             <ul>
-                <li><a href="../index.html">Homepage</a></li>
+                <li><a href="../index/">Homepage</a></li>
                 <div class="navfooter"><font size="2">Samuel Ou 2018</font></div>
             </ul>
         </div>
