--- a/drones/notfound.html
+++ b/drones/notfound.html
@@ -16,14 +16,14 @@
     <div class="navbar">
         <div class="navbartop">
             <ul>
-                <li><a href="index/">Home</a></li>
-                <li><a href="info/">About drones</a></li>
-                <li><a href="gallery/">Gallery</a></li>
+                <li><a href="../drones/">Home</a></li>
+                <li><a href="info">About drones</a></li>
+                <li><a href="gallery">Gallery</a></li>
             </ul>
         </div>
         <div class="navbarbottom">
             <ul>
-                <li><a href="../index/">Homepage</a></li>
+                <li><a href="../index">Homepage</a></li>
                 <div class="navfooter"><font size="2">Samuel Ou 2018</font></div>
             </ul>
         </div>
