--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     
     <div class="navbar">
         <ul>
-           <li><a href="index/">Home</a></li>
-           <li><a href="drones/index/">Mini Project</a></li>
+           <li><a href="../">Home</a></li>
+           <li><a href="drones/">Mini Project</a></li>
            <li><a href="#">TBA</a></li>
         </ul> 
     </div>
