--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <div class="navbar">
         <ul>
-           <li><a href="../">Home</a></li>
+           <li><a href="../digi-site/">Home</a></li>
            <li><a href="drones/">Mini Project</a></li>
            <li><a href="#">TBA</a></li>
         </ul> 
