--- a/drones/notfound.html
+++ b/drones/notfound.html
@@ -23,7 +23,7 @@
         </div>
         <div class="navbarbottom">
             <ul>
-                <li><a href="../index">Homepage</a></li>
+                <li><a href="../">Homepage</a></li>
                 <div class="navfooter"><font size="2">Samuel Ou 2018</font></div>
             </ul>
         </div>
