--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
            <li><a href="../digi-site/">Home</a></li>
            <li><a href="drones/">Mini Project</a></li>
-           <li><a href="#">TBA</a></li>
+           <li><a href="techniques/">Techniques</a></li>
         </ul> 
     </div>
     
