pretty much more stuff

--- a/assessment/index.html
+++ b/assessment/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="header">
-        <b>Ultimate Mjolnir</b>
+        <a href="../assessment/"><b>Ultimate Mjolnir</b></a>
     </div>
 
     <div class="toggle-nav">
