--- a/assessment/model.html
+++ b/assessment/model.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="header">
-        <b>Ultimate Mjolnir</b>
+        <a href="../assessment/"><b>Ultimate Mjolnir</b></a>
     </div>
 
     <div class="toggle-nav">
@@ -49,6 +49,14 @@
 
     <div class="all">
 
+        <div class="buttons">
+            <a class="button" href="https://sketchfab.com/models/c38f08309b6b476883c801597bd24727" target="_blank">See the model on Sketchfab</a>
+        </div>
+        
+        <div class="sketchfab-embed-wrapper">
+            <iframe id="sketchfab" width=100% height=500px src="https://sketchfab.com/models/c38f08309b6b476883c801597bd24727/embed?autospin=1&amp;autostart=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        </div>
+        
         <h2>Tools</h2>
         When designing my build, I used Blender. <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         <h2>Design Elements</h2>
