--- a/assessment/website.html
+++ b/assessment/website.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="header">
-        <b>Ultimate Mjolnir</b>
+        <a href="../assessment/"><b>Ultimate Mjolnir</b></a>
     </div>
 
     <div class="toggle-nav">
@@ -51,7 +51,7 @@
     <div class="all">
 
         <div class="buttons">
-            <a class="button" href="https://github.com/S-Ou/digi-site">See the Code on Github</a>
+            <a class="button" href="https://github.com/S-Ou/digi-site" target="_blank">See the code on GitHub</a>
         </div>
 
         <h2>Colour theme</h2>
