--- a/assessment/index.html
+++ b/assessment/index.html
@@ -54,6 +54,8 @@
             <a class="button" href="model">Building the model</a>
             <a class="button" href="model">Coding the website</a>
         </div>
+        
+        <img src="images/model/concept%20art.png">
 
         <div class="sketchfab-embed-wrapper">
             <iframe id="sketchfab" width=100% height=500px src="https://sketchfab.com/models/c38f08309b6b476883c801597bd24727/embed?autospin=1&amp;autostart=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
