big changes and stuff

--- a/assessment/website.html
+++ b/assessment/website.html
@@ -35,8 +35,7 @@
                 <li><a href="../assessment/"><b>Homepage</b></a></li>
                 <li><a href="model"><b>About the model</b></a></li>
                 <li><a class="active" href="website"><b>About the website</b></a></li>
-                <br>
-                <hr><br>
+                <hr>
                 <li><a href="../"><b>Year 11</b></a></li>
             </ul>
         </div>
@@ -56,17 +55,17 @@
 
         
         <h2>Colour theme</h2>
-        <img src="images/website/colour%20pallete.png">
+        <img src="images/website/colour%20pallete.png" alt="Colour Palette">
 
         <h2>Wireframes</h2>
         <div class="wireframes">
-            <figure><img src="images/website/wireframes/home.png">
+            <figure><img src="images/website/wireframes/home.png" alt="Homepage wireframe">
                 <figcaption>Homepage</figcaption>
             </figure>
-            <figure><img src="images/website/wireframes/homewithnav.png">
+            <figure><img src="images/website/wireframes/homewithnav.png" alt="Homepage wireframe with navbar">
                 <figcaption>Navigation bar</figcaption>
             </figure>
-            <figure><img src="images/website/wireframes/page.png">
+            <figure><img src="images/website/wireframes/page.png" alt="Info Page wireframe">
                 <figcaption>Info Page</figcaption>
             </figure>
         </div>
@@ -85,10 +84,13 @@
 
         <h2>Tools used</h2>
         I used Brackets to code my HTML, CSS and JavaScript.
-        <img src="images/website/brackets.png">
+        <img src="images/website/brackets.png" alt="Brackets screenshot">
 
         <h2>Pages</h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <br>
+        I used a simple folder layout which was housed within my main Year 11 website folder. 
+        <img src="images/Folder%20management.png" alt="Folder tree">
 
         <h2>Techniques</h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
