--- a/assessment/index.html
+++ b/assessment/index.html
@@ -35,8 +35,7 @@
                 <li><a class="active" href="../assessment/"><b>Homepage</b></a></li>
                 <li><a href="model"><b>About the model</b></a></li>
                 <li><a href="website"><b>About the website</b></a></li>
-                <br>
-                <hr><br>
+                <hr>
                 <li><a href="../"><b>Year 11</b></a></li>
             </ul>
         </div>
@@ -55,10 +54,10 @@
             <a class="button" href="model">Coding the website</a>
         </div>
         
-        <img src="images/model/concept%20art.png">
+        <img src="images/model/concept%20art.png" alt="Concept Art">
 
         <div class="sketchfab-embed-wrapper">
-            <iframe id="sketchfab" width=100% height=500px src="https://sketchfab.com/models/c38f08309b6b476883c801597bd24727/embed?autospin=1&amp;autostart=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            <iframe id="sketchfab" src="https://sketchfab.com/models/c38f08309b6b476883c801597bd24727/embed?autospin=1&amp;autostart=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
 
     </div>
