mobile navbar fixes

--- a/assessment/website.html
+++ b/assessment/website.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="header">
-        <a href="../assessment/"><b>Ultimate Mjolnir</b></a>
+        <div class="headertxt"><a href="../assessment/"><b>Ultimate Mjolnir</b></a></div>
     </div>
 
     <div class="toggle-nav">
