--- a/assessment/model.html
+++ b/assessment/model.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="header">
-        <a href="../assessment/"><b>Ultimate Mjolnir</b></a>
+        <div class="headertxt"><a href="../assessment/"><b>Ultimate Mjolnir</b></a></div>
     </div>
 
     <div class="toggle-nav">
@@ -29,6 +29,7 @@
         <span class="n">N</span>
         <span class="u">U</span>
     </div>
+    <div class="toggle-nav-bg"></div>
     <div class="nav-pane slide-out">
         <div class="navbar">
             <ul>
