--- a/assessment/index.html
+++ b/assessment/index.html
@@ -56,6 +56,7 @@
         </div>
         
         <img src="images/model/concept%20art.png" alt="Concept Art">
+        <div class="imgtxt">Concept Art</div>
 
         <div class="sketchfab-embed-wrapper">
             <iframe id="sketchfab" src="https://sketchfab.com/models/c38f08309b6b476883c801597bd24727/embed?autospin=1&amp;autostart=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
