--- a/assessment/website.html
+++ b/assessment/website.html
@@ -53,14 +53,16 @@
         <div class="buttons">
             <a class="button" href="https://github.com/S-Ou/digi-site" target="_blank">See the code on GitHub</a>
         </div>
-
         
         <h2>Colour theme</h2>
         <img src="images/website/colour%20pallete.png" alt="Colour Palette">
+        <div class="imgtxt">Colour Pallete</div>
 
         <h2>Wireframes</h2>
         <div class="wireframes">
+<!--
             <figure><img src="images/website/wireframes/home.png" alt="Homepage wireframe">
+                <div class="imgtxt">Homepage wireframe</div>
                 <figcaption>Homepage</figcaption>
             </figure>
             <figure><img src="images/website/wireframes/homewithnav.png" alt="Homepage wireframe with navbar">
@@ -69,6 +71,13 @@
             <figure><img src="images/website/wireframes/page.png" alt="Info Page wireframe">
                 <figcaption>Info Page</figcaption>
             </figure>
+-->
+            <img src="images/website/wireframes/home.png" alt="Homepage wireframe">
+            <div class="imgtxt">Homepage wireframe</div>
+            <img src="images/website/wireframes/homewithnav.png" alt="Homepage wireframe with navbar">
+            <div class="imgtxt">Homepage wireframe with navbar</div>
+            <img src="images/website/wireframes/page.png" alt="Info Page wireframe">
+            <div class="imgtxt">Info Page wireframe</div>
         </div>
 
         <h2>Navigation</h2>
@@ -79,28 +88,37 @@
         </div>
 
         <h2>Assets</h2>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        I used <a href="https://tinypng.com/">TinyPNG.com</a> to compress the comic Ultimate Mjolnir image on the model page.
+        <img src="images/website/image%20compression.PNG">
+        <div class="imgtxt">TinyPNG compression</div>
 
         <br><br>
 
         <h2>Tools used</h2>
         I used Brackets to code my HTML, CSS and JavaScript.
         <img src="images/website/brackets.png" alt="Brackets screenshot">
+        <div class="imgtxt">Brackets screenshot</div>
 
         <h2>Pages</h2>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        <br>
         I used a simple folder layout which was housed within my main Year 11 website folder. 
         <img src="images/Folder%20management.png" alt="Folder tree">
+        <div class="imgtxt">Folder tree</div>
 
         <h2>Techniques</h2>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
         <h2>Testing and validation</h2>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <img class="validationimg" src="images/website/htmlerrors%20before.png">
+        <div class="imgtxt">HTML errors before</div>
+        <img class="validationimg" src="images/website/htmlerrors%20after.png">
+        <div class="imgtxt">HTML errors after</div>
+        <img class="validationimg" src="images/website/csserrors%20before.png">
+        <div class="imgtxt">CSS errors before</div>        
+        <img class="validationimg" id="test" src="images/website/csserrors%20after.png">
+        <div class="imgtxt">CSS errors after</div>
 
     </div>
-
+s
     <footer>
         <p>2018 Samuel Ou</p>
     </footer>
@@ -108,5 +126,6 @@
     <!--    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
     <script src="jquery.js"></script>
     <script src="scipt.js"></script>
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 
 </body>
