--- a/assessment/website.html
+++ b/assessment/website.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 
+<!--
+Samuel Ou 2018
+-->
+
 <html lang="">
 
 <head>
@@ -60,18 +64,6 @@
 
         <h2>Wireframes</h2>
         <div class="wireframes">
-<!--
-            <figure><img src="images/website/wireframes/home.png" alt="Homepage wireframe">
-                <div class="imgtxt">Homepage wireframe</div>
-                <figcaption>Homepage</figcaption>
-            </figure>
-            <figure><img src="images/website/wireframes/homewithnav.png" alt="Homepage wireframe with navbar">
-                <figcaption>Navigation bar</figcaption>
-            </figure>
-            <figure><img src="images/website/wireframes/page.png" alt="Info Page wireframe">
-                <figcaption>Info Page</figcaption>
-            </figure>
--->
             <img src="images/website/wireframes/home.png" alt="Homepage wireframe">
             <div class="imgtxt">Homepage wireframe</div>
             <img src="images/website/wireframes/homewithnav.png" alt="Homepage wireframe with navbar">
@@ -98,6 +90,8 @@
         I used Brackets to code my HTML, CSS and JavaScript.
         <img src="images/website/brackets.png" alt="Brackets screenshot">
         <div class="imgtxt">Brackets screenshot</div>
+        <img src="images/website/brackets%20splitscreen.png" alt="Brackets splitscreen">
+        <div class="imgtxt">Brackets splitscreen</div>
 
         <h2>Pages</h2>
         I used a simple folder layout which was housed within my main Year 11 website folder. 
@@ -105,9 +99,10 @@
         <div class="imgtxt">Folder tree</div>
 
         <h2>Techniques</h2>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        I used some simple techniques within Brackets including splitscreen to view multiple files at once, and Beautify which properly formatted my code (indents, etc.)
 
         <h2>Testing and validation</h2>
+        I used the live preview feature in Brackets to see what my site looks like when I was coding it. I then pushed the code to GitHub, where I was able to see the website as a whole product, and to double-check if the code worked.
         <img class="validationimg" src="images/website/htmlerrors%20before.png">
         <div class="imgtxt">HTML errors before</div>
         <img class="validationimg" src="images/website/htmlerrors%20after.png">
