Small caption fix

--- a/assessment/model.html
+++ b/assessment/model.html
@@ -70,8 +70,8 @@ Samuel Ou 2018
         
         <h2>Techniques</h2>
         In Blender, I used multiple techniques: <br>
-        Cutting the shape <img src="images/model/blender%20cut.png">
-        Resizing the shape <img src="images/model/blender%20resize.png">
+        Cutting the shape <img src="images/model/blender%20cut.png"><div class="imgtxt">Cutting the shape</div>
+        Resizing the shape <img src="images/model/blender%20resize.png"><div class="imgtxt">Resizing the shape</div>
         Moving the shape <br>
         Making parts of the shape glow
         
